--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,19 @@
   "type": "wordpress-plugin",
   "require-dev": {
     "phpunit/phpunit": "^9.5",
-    "php-stubs/wordpress-stubs": "^6.0"
+    "php-stubs/wordpress-stubs": "^6.0",
+    "squizlabs/php_codesniffer": "^3.7",
+    "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
+    "wp-coding-standards/wpcs": "^3.0"
   },
   "autoload": {
     "psr-4": {
       "CouncilDebtCounters\\": "includes/"
+    }
+  },
+  "extra": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   }
 }
