Update .gitignore and composer.json to improve dependency management and plugin configuration

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,10 @@
     "allow-plugins": {
       "dealerdirect/phpcodesniffer-composer-installer": true
     }
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
