--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,32 @@
+# Composer dependencies
+/vendor/
+composer.lock
+
+# Node dependencies
+/node_modules/
+npm-debug.log
+yarn-error.log
+
+# Build artifacts
+/build/
+*.zip
+*.tar.gz
+
+# Log files
+*.log
 troubleshooting.log
+
+# OS-generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Editor-specific files
+.vscode/
+.idea/
+*.swp
+*~
