--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "php-stubs/wordpress-stubs": "^6.0",
     "squizlabs/php_codesniffer": "^3.7",
     "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
-    "wp-coding-standards/wpcs": "^3.0"
+    "wp-coding-standards/wpcs": "^3.1"
   },
   "autoload": {
     "psr-4": {
@@ -23,5 +23,8 @@
     "allow-plugins": {
       "dealerdirect/phpcodesniffer-composer-installer": true
     }
+  },
+  "require": {
+    "smalot/pdfparser": "^2.12"
   }
 }
