--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     }
   },
   "require": {
-    "smalot/pdfparser": "^2.12"
+    "smalot/pdfparser": "^2.12",
+    "fortawesome/fontawesome-free": "^6.4.0"
   }
 }
