--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,6 @@
     }
   },
   "require": {
-    "smalot/pdfparser": "^2.12",
-    "fortawesome/fontawesome-free": "^6.4.0"
+    "smalot/pdfparser": "^2.12"
   }
 }
